# Embedded-Systems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
console/: CMakeLists.txt  projconsole.c
i2c/: CMakeLists.txt  i2c.c  i2c_master.c  i2c_slave.c  master.c  slave.c
i2c_master/: CMakeLists.txt  master.c  master.h
i2c_slave/: CMakeLists.txt  slave.c
src/: CMakeLists.txt  FreeRTOSConfig.h  hw_config.c  lwipopts.h  main.c  pico-1.c  pico-2.c  pico_1.c  picow_access_point.c  picowi_defs.h  picowi_init.c  picowi_init.h
src/access_point/: access_point.h  picow_access_point.c
src/common/: b64.c  b64.h
src/console/: projconsole.c
src/deauth/: CMakeLists.txt  deauth.c  deauth.h
src/dhcp_flood/: CMakeLists.txt  dhcp_flood.c  dhcp_flood.h
src/dnsserver/: dnsserver.c  dnsserver.h
src/driver/: example.c
src/i2c_bridge/: i2c_bridge.c  i2c_bridge.h
src/i2c_helper/: i2c.c  i2c.h
src/lwip_custom/: CMakeLists.txt  ethernet.c  ip4.c  ip6.c  tcpip.c
src/net_config/: lwipopts.h  net_config.c  net_config.h
src/net_config/dhcpserver/: dhcpserver.c
src/net_config/dnsserver/: dnsserver.c  dnsserver.h
src/net_config/tcpserver/: tcpserver.c  tcpserver.h
src/net_manager/: net_manager.c  net_manager.h
src/pcap_helper/: CMakeLists.txt  example.c  pcap.c  pcap.h  sd_card.c  sd_card.h
src/pico-wi/: CMakeLists.txt
src/sd_helper/: CMakeLists.txt  example.c  sd_card.h
src/webserver/: picow_access_point.c  picow_access_point.h  picow_web.c  picow_web.h  wifi_scan.h.old
src/wifi/: wifi.c  wifi.h
src/wifi_scan/: wifi_scan.c  wifi_scan.h
